2006-07-30  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: require GTK+ 2.10
	* data/monkey-bubble.glade: insert the preferences into the game menu
	* src/ui/Makefile.am: updated
	* src/ui/update-from-egg.sh,
	* src/ui/eggaccelerators.c,
	* src/ui/eggaccelerators.h,
	* src/ui/eggcellrendererkeys.c,
	* src/ui/eggcellrendererkeys.h: removed old libegg code
	* src/ui/keyboard-properties.c: updated to new GTK+ code
	* src/view/monkey-canvas.c: fixed error messages (Erreur)

2006-06-26  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/eggcellrendererkeys.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: fixed gcc 4.1 warnings (patch from
	Michael J. Knox)

2006-06-21  Raivis Dejus  <orvils@gmail.com>

	* configure.in	Added lv in ALL_LINGUAS line.

2006-06-14  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: depend on GStreamer 0.10
	* src/audio/sound-manager.c: use GStreamer 0.10

2006-03-21  Sven Herzberg  <herzi@gnome-de.org>

	* src/net/client.c,
	* src/net/game-manager-proxy.c,
	* src/net/game-manager.c,
	* src/net/simple-server.c,
	* src/ui/game-network-player-manager.c,
	* src/ui/ui-network-client.c,
	* src/ui/ui-network-server.c: fixed gcc 4 warnings (based upon
	a patch from Michael Knox)

2006-02-05  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2006-01-07  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2005-10-12  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-08-10  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-04-01  Steve Murphy  <murf@e-tools.com>

	* configure.in: Added "rw" to ALL_LINGUAS.

2005-03-29  Sven Herzberg  <herzi@gnome-de.org>

	* src/ui/eggcellrendererkeys.c: included a patch from Robert Day
	<zarin@dscn.net> to fix compilation with gcc 3.4
